# graphs_analysis

./: .gitmodules  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: format.yml
configs/: msbfs.ini  mst.ini  pr.ini  ssbfs.ini
cpp/: CMakeLists.txt
cpp/common/: config.h  msbfs_config.h  mst_config.h  pr_config.h  ssbfs_config.h
cpp/graphblas/: CMakeLists.txt
cpp/graphblas/common/: algorunner.h  graph.h  parser.cpp  parser.h
cpp/graphblas/msbfs/: CMakeLists.txt  algo.cpp  algo.h  main.cpp
cpp/graphblas/mst/: CMakeLists.txt  algo.cpp  algo.h  main.cpp
cpp/graphblas/pagerank/: CMakeLists.txt  algo.cpp  algo.h  main.cpp
cpp/graphblas/ssbfs/: CMakeLists.txt  algo.cpp  algo.h  main.cpp
cpp/spla/: CMakeLists.txt
cpp/spla/common/: algorunner.h  graph.h  parser.cpp  parser.h
cpp/spla/msbfs/: CMakeLists.txt  main.cpp  msbfs.cpp  msbfs.h
cpp/spla/mst/: CMakeLists.txt  main.cpp  mst.cpp  mst.h
cpp/spla/pagerank/: CMakeLists.txt  main.cpp  pr-sq.cpp  pr.cpp  pr.h
cpp/spla/ssbfs/: CMakeLists.txt  main.cpp  ssbfs.cpp  ssbfs.h
data/: toy.gr
experimants/: run_experiments.ipynb
experiments/: measure_memory.sh  runner.ipynb
experiments/results/msbfs/: gb-msbfs_CAL_N=1.txt  gb-msbfs_CAL_N=16.txt  gb-msbfs_CAL_N=4.txt  gb-msbfs_CAL_N=64.txt  gb-msbfs_NY_N=1.txt  gb-msbfs_NY_N=16.txt  gb-msbfs_NY_N=4.txt  gb-msbfs_NY_N=64.txt  spla-msbfs_CAL_N=16.txt  spla-msbfs_CAL_N=4.txt  spla-msbfs_FLA_N=1.txt  spla-msbfs_FLA_N=16.txt  spla-msbfs_NY_N=4.txt  spla-msbfs_NY_N=64.txt
experiments/results/mst/: gb-mst_CAL.txt  gb-mst_FLA.txt  gb-mst_USA.txt  spla-mst_CAL.txt  spla-mst_W.txt
experiments/results/pagerank/: gb-pagerank_sx-stackoverflow.txt  gb-pagerank_web-berkstan.txt  gb-pagerank_web-google.txt  gb-pagerank_wiki-topcats.txt  spla-pagerank_sx-stackoverflow.txt  spla-pagerank_web-google.txt  spla-pagerank_web-stanford.txt
experiments/results/ssbfs/: spla-ssbfs_USA.txt  spla-ssbfs_W.txt
experiments/scripts/: exp1_graphics.py  exp2_graphics.py
graphblas/: CMakeLists.txt
graphblas/boruvka/: main.cpp
graphblas/include/: graph.h
graphblas/include/algos/: algorunner.h  boruvka.h
graphblas/include/parser/: parser.h
graphblas/src/: main.cpp
graphblas/src/algos/: boruvka.cpp
graphblas/src/parser/: parser.cpp
mst-graphblas/src/parser/: parser.cpp
mst_pyspark/boruvka/: boruvka.py  utils.py
mst_pyspark/test/: test_boruvka.py
results/msbfs/: gb-msbfs_CAL_N=1.txt  gb-msbfs_CAL_N=16.txt  gb-msbfs_CAL_N=4.txt  gb-msbfs_CAL_N=64.txt  gb-msbfs_FLA_N=1.txt  gb-msbfs_FLA_N=16.txt  gb-msbfs_FLA_N=4.txt  gb-msbfs_FLA_N=64.txt  gb-msbfs_NY_N=1.txt  gb-msbfs_NY_N=16.txt  gb-msbfs_NY_N=4.txt  gb-msbfs_NY_N=64.txt  spla-msbfs_CAL_N=1.txt  spla-msbfs_CAL_N=16.txt  spla-msbfs_CAL_N=4.txt  spla-msbfs_CAL_N=64.txt  spla-msbfs_FLA_N=1.txt  spla-msbfs_FLA_N=16.txt  spla-msbfs_FLA_N=4.txt  spla-msbfs_FLA_N=64.txt  spla-msbfs_NY_N=1.txt  spla-msbfs_NY_N=16.txt  spla-msbfs_NY_N=4.txt  spla-msbfs_NY_N=64.txt
results/mst/: gb-mst_CAL.txt  gb-mst_FLA.txt  gb-mst_NY.txt  gb-mst_USA.txt  gb-mst_W.txt  spla-mst_CAL.txt  spla-mst_FLA.txt  spla-mst_NY.txt  spla-mst_USA.txt  spla-mst_W.txt
results/pagerank/: gb-pagerank_sx-stackoverflow.txt  gb-pagerank_web-berkstan.txt  gb-pagerank_web-google.txt  gb-pagerank_web-stanford.txt  gb-pagerank_wiki-topcats.txt  spla-pagerank_sx-stackoverflow.txt  spla-pagerank_web-berkstan.txt  spla-pagerank_web-google.txt  spla-pagerank_web-stanford.txt  spla-pagerank_wiki-topcats.txt
results/pagerank_h/: gb-pagerank_web-berkstan.txt  gb-pagerank_web-google.txt  gb-pagerank_web-stanford.txt  spla-pagerank-sq_web-berkstan.txt  spla-pagerank-sq_web-google.txt  spla-pagerank-sq_web-stanford.txt  spla-pagerank_web-berkstan.txt  spla-pagerank_web-google.txt  spla-pagerank_web-stanford.txt
results/ssbfs/: gb-ssbfs_CAL.txt  gb-ssbfs_FLA.txt  gb-ssbfs_NY.txt  gb-ssbfs_USA.txt  gb-ssbfs_W.txt  spla-ssbfs_CAL.txt  spla-ssbfs_FLA.txt  spla-ssbfs_NY.txt  spla-ssbfs_USA.txt  spla-ssbfs_W.txt
tests/graphblas/: test_dimacs_parser.cpp  test_msbfs.cpp  test_pagerank.cpp  test_snap_parser.cpp  test_ssbfs.cpp
triangles/graphblas/: demo.ipynb
triangles/graphblas/src/: burkhardt.py  sandia.py
triangles/graphblas/tests/: test.py
triangles/scripts/: download.py  utils.py
triangles/spla_tc/: burkhardt.py  sandia.py
triangles/spla_tc/src/: burkhardt.py  sandia.py
triangles/spla_tc/tests/: test.py
